# JdAgent

./: .gitignore  README.md  app_file_uploader.py  app_qa.py  config_data.py  file_history_store.py  knowledge_base.py  main.py  md5.txt  pyproject.toml  rag.py  vector_store.py
chat_history/: demo.txt  koko.txt
chroma_db/: chroma.sqlite3
data/: 尺码选择.txt  洗涤建议.txt  穿搭攻略.txt
